--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "bundle/ctrlp.vim"]
 	path = bundle/ctrlp.vim
 	url = git@github.com:kien/ctrlp.vim.git
+[submodule "bundle/bufkill.vim"]
+	path = bundle/bufkill.vim
+	url = git@github.com:vim-scripts/bufkill.vim.git
