--- a/.gitmodules
+++ b/.gitmodules
@@ -4,9 +4,9 @@
 [submodule "bundle/bufkill.vim"]
 	path = bundle/bufkill.vim
 	url = git@github.com:vim-scripts/bufkill.vim.git
-[submodule "bundle/elm.vim"]
-	path = bundle/elm.vim
-  url = git@github.com:lambdatoast/elm.vim.git
 [submodule "bundle/typescript-vim"]
 	path = bundle/typescript-vim
 	url = git@github.com:leafgarland/typescript-vim.git
+[submodule "bundle/elm-vim"]
+	path = bundle/elm-vim
+	url = git@github.com:ElmCast/elm-vim.git
