--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "bundle/vim-stylish-haskell"]
 	path = bundle/vim-stylish-haskell
 	url = git@github.com:nbouscal/vim-stylish-haskell.git
+[submodule "bundle/nerdtree"]
+	path = bundle/nerdtree
+	url = https://github.com/scrooloose/nerdtree.git
