--- a/.gitmodules
+++ b/.gitmodules
@@ -1,18 +1,18 @@
 [submodule "bundle/ctrlp.vim"]
 	path = bundle/ctrlp.vim
-	url = git@github.com:kien/ctrlp.vim.git
+	url = https://github.com/kien/ctrlp.vim.git
 [submodule "bundle/bufkill.vim"]
 	path = bundle/bufkill.vim
-	url = git@github.com:vim-scripts/bufkill.vim.git
+	url = https://github.com/vim-scripts/bufkill.vim.git
 [submodule "bundle/typescript-vim"]
 	path = bundle/typescript-vim
-	url = git@github.com:leafgarland/typescript-vim.git
+	url = https://github.com/leafgarland/typescript-vim.git
 [submodule "bundle/elm-vim"]
 	path = bundle/elm-vim
-	url = git@github.com:ElmCast/elm-vim.git
+	url = https://github.com/ElmCast/elm-vim.git
 [submodule "bundle/vim-stylish-haskell"]
 	path = bundle/vim-stylish-haskell
-	url = git@github.com:nbouscal/vim-stylish-haskell.git
+	url = https://github.com/nbouscal/vim-stylish-haskell.git
 [submodule "bundle/nerdtree"]
 	path = bundle/nerdtree
 	url = https://github.com/scrooloose/nerdtree.git
@@ -24,13 +24,13 @@
 	url = https://github.com/prettier/vim-prettier
 [submodule "bundle/lightline.vim"]
 	path = bundle/lightline.vim
-	url = git@github.com:itchyny/lightline.vim.git
+	url = https://github.com/itchyny/lightline.vim.git
 [submodule "bundle/rainbow"]
 	path = bundle/rainbow
-	url = git@github.com:luochen1990/rainbow.git
+	url = https://github.com/luochen1990/rainbow.git
 [submodule "bundle/vim-pug"]
 	path = bundle/vim-pug
-	url = git@github.com:digitaltoad/vim-pug.git
+	url = https://github.com/digitaltoad/vim-pug.git
 [submodule "bundle/editorconfig"]
 	path = bundle/editorconfig
-	url = git@github.com:editorconfig/editorconfig-vim.git
+	url = https://github.com/editorconfig/editorconfig-vim.git
